# xtb-model

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.c  wrapper.h
src/: lib.rs  nauty.rs  raw.rs  xtb.rs
tests/: test_3d.rs  test_model.rs  test_raw.rs
tests/files/: charges  gfnff_charges  gfnff_topo  test.xyz  wbo  xtbrestart  xtbtopo.mol
